--- a/src/Infrastructure/Infrastructure.csproj
+++ b/src/Infrastructure/Infrastructure.csproj
@@ -13,6 +13,8 @@
 
   <ItemGroup>
     <Folder Include="Data\Configurations\Read\" />
+    <Folder Include="Migrations\Write\" />
+    <Folder Include="Migrations\Read\" />
     <Folder Include="Repositories\" />
   </ItemGroup>
 
