--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WriteDb": "Server=(localdb)\\MSSQLLocalDb; Database=eshopappWrite; Trusted_Connection=true; MultipleActiveResultSets=True;",
+    "ReadDb": "Server=(localdb)\\MSSQLLocalDb; Database=eshopappRead; Trusted_Connection=true; MultipleActiveResultSets=True;"
+  }
 }
