--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -10,11 +10,10 @@
     <Folder Include="Configuration\" />
     <Folder Include="Features\Address\" />
     <Folder Include="Features\Shop\" />
-    <Folder Include="Features\Product\" />
     <Folder Include="Features\Order\" />
     <Folder Include="Features\Admin\" />
     <Folder Include="Features\Category\" />
-    <Folder Include="Features\User\Commands\UserLogin\" />
+    <Folder Include="Features\User\Commands\" />
     <Folder Include="MapperProfiles\" />
   </ItemGroup>
 
@@ -23,6 +22,10 @@
     <PackageReference Include="FluentValidation" Version="11.11.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.14" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj" />
   </ItemGroup>
 
 </Project>
