--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -9,11 +9,11 @@
   <ItemGroup>
     <Folder Include="Configuration\" />
     <Folder Include="Features\Address\" />
-    <Folder Include="Features\Shop\" />
     <Folder Include="Features\Order\" />
     <Folder Include="Features\Admin\" />
     <Folder Include="Features\Category\" />
     <Folder Include="Features\User\Commands\" />
+    <Folder Include="Features\User\Events\" />
   </ItemGroup>
 
   <ItemGroup>
